// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SingleReport /> should render EditReport 1`] = `
<div>
  <div>
    <p>
      <b>
        Edit an incident
      </b>
    </p>
    <div
      className="edit__body"
    >
      <div
        className="edit__body__wrapper"
      >
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Title: 
            </h4>
          </div>
          <p
            id="incident-title"
          >
            dhjfd
          </p>
        </div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Type: 
            </h4>
          </div>
          <select
            disabled={false}
            id="incident-type"
            name="incidentType"
            onBlur={[MockFunction]}
            onChange={[MockFunction]}
            value="red-flag"
          >
            <option
              value=""
            >
              Select type
            </option>
            <option
              value="red-flag"
            >
              Red flag
            </option>
            <option
              value="intervention"
            >
              Intervention
            </option>
          </select>
        </div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Created: 
            </h4>
          </div>
          <p
            id="incident-date"
          >
            Invalid date
          </p>
        </div>
        <div>
          <div>
            <h4>
              Location: 
            </h4>
            <textarea
              disabled={true}
              id="incident-location"
              name="location"
              onChange={[MockFunction]}
              value="sdjnkjs"
            />
          </div>
        </div>
        <div
          className=""
        >
          <h4>
            Comment
          </h4>
          <textarea
            disabled={true}
            id="incident-comment"
            name="comment"
            onChange={[MockFunction]}
            type="text"
            value="jhdfhfdjk"
          />
        </div>
        <div>
          <button
            className=""
            id="edit-comment-btn"
            onClick={[MockFunction]}
          >
            Edit Comment
          </button>
          <button
            className=""
            id="edit-location-btn"
            onClick={[MockFunction]}
          >
            Edit Location
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SingleReport /> should render a different content when pathname is Admin 1`] = `
<div>
  <div>
    <p>
      <b>
        Edit an incident
      </b>
    </p>
    <div
      className="edit__body"
    >
      <div
        className="edit__body__wrapper"
      >
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Title: 
            </h4>
          </div>
          <p
            id="incident-title"
          >
            dhjfd
          </p>
        </div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Type: 
            </h4>
          </div>
          <select
            disabled={true}
            id="incident-type"
            name="incidentType"
            onBlur={[MockFunction]}
            onChange={[MockFunction]}
            value="red-flag"
          >
            <option
              value=""
            >
              Select type
            </option>
            <option
              value="red-flag"
            >
              Red flag
            </option>
            <option
              value="intervention"
            >
              Intervention
            </option>
          </select>
        </div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Created: 
            </h4>
          </div>
          <p
            id="incident-date"
          >
            Invalid date
          </p>
        </div>
        <div>
          <div>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon="check-circle"
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <h4>
              Status: 
            </h4>
          </div>
          <select
            disabled={true}
            id="incident-status"
            name="status"
            onBlur={[MockFunction]}
            onChange={[MockFunction]}
            value="draft"
          >
            <option
              value=""
            >
              Select status
            </option>
            <option
              value="draft"
            >
              Draft
            </option>
            <option
              value="under-investigation"
            >
              Under Investigation
            </option>
            <option
              value="rejected"
            >
              Rejected
            </option>
            <option
              value="resolved"
            >
              Resolved
            </option>
          </select>
        </div>
        <div>
          <div>
            <h4>
              Location: 
            </h4>
            <textarea
              disabled={true}
              id="incident-location"
              name="location"
              onChange={[MockFunction]}
              value="sdjnkjs"
            />
          </div>
        </div>
        <div
          className=""
        >
          <h4>
            Comment
          </h4>
          <textarea
            disabled={true}
            id="incident-comment"
            name="comment"
            onChange={[MockFunction]}
            type="text"
            value="jhdfhfdjk"
          />
        </div>
        <div>
          <button
            className=""
            id="edit-location-btn"
            onClick={[MockFunction]}
          >
            Edit Status
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
